Fix unittest failing after implementing NAS-1828